Updated autonomous routines with working paths from Duluth Regional. Checked static analyzer, none reported now.