@@ -1,8 +1,8 @@
 package frc.robot.commands.auton;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import com.pathplanner.lib.auto.AutoBuilder;
@@ -23,60 +23,57 @@ import frc.robot.commands.auton.utils.AutonCommand;
 import frc.robot.commands.auton.utils.AutonUtils;
 
 public class ThreeCoralAuton extends AutonCommand {
-    private final AutonUtils utils;
 
+    private final AutonUtils utils;
     private final List<PathPlannerPath> paths;
 
     public ThreeCoralAuton(ArmivatorCommands armivatorCommands, AutonUtils utils, StartingPosition position) {
         this.utils = utils;
-
-        paths = getAutonPaths(position);
+        this.paths = getAutonPaths(position);
 
         if (Robot.isSimulation()) {
             addCommands(utils.resetOdometry(paths.get(0)));
         }
 
         addCommands(
-            Commands.sequence(
-                Commands.parallel(
-                    armivatorCommands.setArmivatorState(ElevatorStates.TOP, ArmStates.TOP),
-                    AutoBuilder.followPath(paths.get(0))
-                ),
-                armivatorCommands.scoreCoralAuto(),
-                Commands.parallel(
-                    AutoBuilder.followPath(paths.get(1)),
-                    Commands.sequence(
-                        Commands.waitSeconds(0.5),
-                        armivatorCommands.setArmivatorState(ElevatorStates.PICKUP, ArmStates.BOTTOM)
-                    )
-                ),
-                utils.runSerializerCommand(SerializerConstants.MAX_TIMEOUT),
-                armivatorCommands.setElevatorState(ElevatorStates.BOTTOM).withTimeout(ElevatorTravelTime.BOTTOM_TO_PICKUP),
-                Commands.parallel(
-                    AutoBuilder.followPath(paths.get(2)),
-                    armivatorCommands.setArmivatorState(ElevatorStates.TOP, ArmStates.TOP)
-                ),
-                armivatorCommands.scoreCoralAuto(),
-                Commands.parallel(
-                    AutoBuilder.followPath(paths.get(3)),
-                    Commands.sequence(
-                        Commands.waitSeconds(0.5),
-                        armivatorCommands.setArmivatorState(ElevatorStates.PICKUP, ArmStates.BOTTOM)
-                    )
-                ),
-                utils.runSerializerCommand(SerializerConstants.MAX_TIMEOUT),
-                armivatorCommands.setElevatorState(ElevatorStates.BOTTOM).withTimeout(ElevatorTravelTime.BOTTOM_TO_PICKUP),
-                Commands.parallel(
-                    AutoBuilder.followPath(paths.get(4)),
-                    armivatorCommands.setArmivatorState(ElevatorStates.TOP, ArmStates.TOP)
-                ),
-                armivatorCommands.scoreCoralAuto(),
-                Commands.parallel(
-                    utils.driveBackward(),
-                    Commands.sequence(
-                        Commands.waitSeconds(0.75),
-                        armivatorCommands.setArmivatorState(ElevatorStates.BOTTOM, ArmStates.BOTTOM)
-                    )
+            Commands.parallel(
+                armivatorCommands.setArmivatorState(ElevatorStates.TOP, ArmStates.TOP),
+                AutoBuilder.followPath(paths.get(0))
+            ),
+            armivatorCommands.scoreCoral(),
+            Commands.parallel(
+                AutoBuilder.followPath(paths.get(1)),
+                Commands.sequence(
+                    Commands.waitSeconds(0.5),
+                    armivatorCommands.setArmivatorState(ElevatorStates.PICKUP, ArmStates.BOTTOM)
+                )
+            ),
+            utils.runSerializerCommand(SerializerConstants.MAX_TIMEOUT),
+            armivatorCommands.setElevatorState(ElevatorStates.BOTTOM).withTimeout(ElevatorTravelTime.BOTTOM_TO_PICKUP),
+            Commands.parallel(
+                AutoBuilder.followPath(paths.get(2)),
+                armivatorCommands.setArmivatorState(ElevatorStates.TOP, ArmStates.TOP)
+            ),
+            armivatorCommands.scoreCoral(),
+            Commands.parallel(
+                AutoBuilder.followPath(paths.get(3)),
+                Commands.sequence(
+                    Commands.waitSeconds(0.5),
+                    armivatorCommands.setArmivatorState(ElevatorStates.PICKUP, ArmStates.BOTTOM)
+                )
+            ),
+            utils.runSerializerCommand(SerializerConstants.MAX_TIMEOUT),
+            armivatorCommands.setElevatorState(ElevatorStates.BOTTOM).withTimeout(ElevatorTravelTime.BOTTOM_TO_PICKUP),
+            Commands.parallel(
+                AutoBuilder.followPath(paths.get(4)),
+                armivatorCommands.setArmivatorState(ElevatorStates.TOP, ArmStates.TOP)
+            ),
+            armivatorCommands.scoreCoral(),
+            Commands.parallel(
+                utils.driveBackward(),
+                Commands.sequence(
+                    Commands.waitSeconds(0.75),
+                    armivatorCommands.setArmivatorState(ElevatorStates.BOTTOM, ArmStates.BOTTOM)
                 )
             )
         );
@@ -84,30 +81,28 @@ public class ThreeCoralAuton extends AutonCommand {
 
     @Override
     protected List<PathPlannerPath> getAutonPaths(StartingPosition position) {
-        return switch (position) {
-            case LEFT -> List.of(
-                utils.loadPath("SideCoral-1").mirrorPath(),
-                utils.loadPath("SideCoral-2").mirrorPath(),
-                utils.loadPath("SideCoral-3").mirrorPath(),
-                utils.loadPath("SideCoral-4").mirrorPath(),
-                utils.loadPath("SideCoral-5").mirrorPath()
-
-            );
-            case CENTER -> Collections.emptyList();
-            case RIGHT -> List.of(
+        return Map.of(
+            StartingPosition.LEFT, List.of(
                 utils.loadPath("SideCoral-1"),
                 utils.loadPath("SideCoral-2"),
                 utils.loadPath("SideCoral-3"),
                 utils.loadPath("SideCoral-4"),
                 utils.loadPath("SideCoral-5")
-
-            );
-        };
+            ),
+            StartingPosition.CENTER, List.<PathPlannerPath>of(),
+            StartingPosition.RIGHT, List.of(
+                utils.loadPath("SideCoral-1").mirrorPath(),
+                utils.loadPath("SideCoral-2").mirrorPath(),
+                utils.loadPath("SideCoral-3").mirrorPath(),
+                utils.loadPath("SideCoral-4").mirrorPath(),
+                utils.loadPath("SideCoral-5").mirrorPath()
+            )
+        ).getOrDefault(position, List.<PathPlannerPath>of());
     } 
 
     @Override
     public List<Pose2d> getAllPathPoses() {
-        return paths.subList(0, 4).stream()
+        return paths.stream()
             .map(PathPlannerPath::getPathPoses)
             .flatMap(Collection::stream)
             .collect(Collectors.toList());
